Fixed text alignment for About Me page on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ hr.solid {
 }
 
 .indexContent p {
-    text-align: justify;
+    text-align: left;
     margin-top: 3px;
 }
 
